# onelead

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
onelead/: hooks.py  install.py  modules.txt
onelead/google_lead/doctype/google_ad_campaign_config/: google_ad_campaign_config.js  google_ad_campaign_config.json  google_ad_campaign_config.py  test_google_ad_campaign_config.py
onelead/google_lead/doctype/google_ads_setting/: google_ads_setting.js  google_ads_setting.json  google_ads_setting.py  test_google_ads_setting.py
onelead/google_lead/doctype/google_lead_form/: google_lead_form.js  google_lead_form.json  google_lead_form.py  test_google_lead_form.py
onelead/google_lead/doctype/google_lead_logs/: google_lead_logs.js  google_lead_logs.json  google_lead_logs.py  test_google_lead_logs.py
onelead/google_lead/doctype/google_webhook_lead_logs/: google_webhook_lead_logs.js  google_webhook_lead_logs.json  google_webhook_lead_logs.py  test_google_webhook_lead_logs.py
onelead/google_lead/doctype/lead_field_mapping/: lead_field_mapping.json  lead_field_mapping.py
onelead/meta_lead/dashboard_chart/ads_performance/: ads_performance.json
onelead/meta_lead/dashboard_chart/leads/: leads.json
onelead/meta_lead/doctype/meta_ad_account/: meta_ad_account.js  (+3 more)
onelead/public/css/: meta.css
onelead/public/js/: custom_number_card.js  dashboard_override.js
onelead/utils/: formatting_functions.py  google_lead.py  meta_lead.py  utils.py
onelead/utils/meta/: formatting_functions.py  manage_ads.py  manage_leads.py  poll_leads.py
(+87 files in other folders)
