[project]
name = "onelead"
authors = [
    { name = "Redsoft ERP", email = "dev@redsoftware.in"}
]
description = "One app for featching all Ad Form Leads"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0", # Installed and managed by bench.
    "facebook_business>=21.0.3",
    "phonenumbers>=8.13.13"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
